# PartifyChallenge

./: .gitignore  README.md
Client/: package-lock.json  package.json
Client/src/: App.css  App.jsx
Client/src/components/Dropdown/: Dropdown.jsx
Client/src/components/DropdownButton/: DropdownButton.css  DropdownButton.jsx
Client/src/components/DropdownItem/: DropdownItem.jsx
Client/src/components/Header/: Header.css  Header.jsx
Client/src/pages/: App.css  Collections.jsx  Home.jsx  NoPage.jsx
Client/src/pages/components/Dropdown/: Dropdown.jsx
Client/src/pages/components/DropdownButton/: DropdownButton.css  DropdownButton.jsx
Client/src/pages/components/DropdownContent/: DropdownContent.css  DropdownContent.jsx
Client/src/pages/components/DropdownItem/: DropdownItem.css  DropdownItem.jsx
Client/src/pages/components/Header/: Header.jsx
Client/src/pages/components/SearchButton/: SearchButton.css  SearchButton.jsx
Server/: pyproject.toml
Server/Partify/: __init__.py  config.py  model.py
Server/Partify/api/: __init__.py  collections.py
Server/sql/: data.sql  schema.sql
Server/sql/uploads/: temp.txt
