[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Partify"
version = "1.0.0"
dependencies = [
    "Flask"
]
requires-python = ">=3.12"

[tool.setuptools]
packages = ["Partify"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
